--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   rabbitmq:
     image: "rabbitmq:management"
+    container_name: 'rabbitmq'
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -11,6 +12,8 @@ services:
       RABBITMQ_DEFAULT_PASS: yourpassword
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
+    networks:
+        - rabbitmq_nodejs
 
   mongodb:
     image: "mongo"
@@ -20,21 +23,24 @@ services:
       - mongo_data:/data/db
 
   service-a:
+    container_name: service-a
     build:
       context: ./service-a
-      dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    depends_on:
-      - rabbitmq
-      - mongodb
     env_file:
-      - .env
+      - ./service-a/.env
     volumes:
       - ./service-a:/service-a
       - service-a-node-modules:/service-a/node_modules
+    depends_on:
+      - rabbitmq
+      - mongodb
 
 volumes:
   rabbitmq_data:
+    name: rabbitmq_data
   mongo_data:
+    name: mongo_data
   service-a-node-modules:
+    name: service-a-node-modules
