--- a/service-a/package.json
+++ b/service-a/package.json
@@ -4,17 +4,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch src --watch package.json --ext ts,json --exec \"ts-node src/index.ts\""
+    "start": "nodemon --legacy-watch src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^22.4.1",
     "amqplib": "^0.10.4",
+    "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
